gen/26.1/rpk/rpk-profile-prompt.adoc
= rpk profile prompt
:description: rpk profile prompt

Prompt a profile name formatted for a PS1 prompt.

This command prints ANSI-escaped text per your current profile's "prompt"
field. If the current profile does not have a prompt, this prints nothing.
If the prompt is invalid, this exits 0 with no message. To validate the
current prompt, use the --validate flag.

This command may introduce other % variables in the future, if you want to
print a % directly, use %% to escape it.

To use this in zsh, be sure to add setopt PROMPT_SUBST to your .zshrc.
To edit your PS1, use something like PS1='$(rpk profile prompt)' in your
shell rc file.

FORMAT

The "prompt" field supports space or comma separated modifiers and a quoted
string that is be modified. Inside the string, the variable %p or %n refers to
the profile name. As a few examples:

    prompt: hi-white, bg-red, bold, "[%p]"
    prompt: hi-red  "PROD"
    prompt: white, "dev-%n

If you want to have multiple formats, you can wrap each formatted section in
parentheses.

    prompt: ("--") (hi-white bg-red bold "[%p]")

COLORS

All ANSI colors are supported, with names matching the color name:
"black", "red", "green", "yellow", "blue", "magenta", "cyan", "white".

The "hi-" prefix indicates a high-intensity color: "hi-black", "hi-red", etc.
The "bg-" prefix modifies the background color: "bg-black", "bg-hi-red", etc.

MODIFIERS

Four modifiers are supported, "bold", "faint", "underline", and "invert".

RAW MODE

The "raw" modifier disables ANSI color escapes entirely, outputting plain text.
This is useful when your shell has issues with ANSI escape sequences affecting
terminal width calculations.

    prompt: raw, "%n"
    prompt: raw, "[%p]"

== Usage

[,bash]
----
rpk profile prompt [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for prompt.

|--validate |- |Exit with an error message if the prompt is invalid.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===